--- a/examples/CameraTest/res/layout/product_item.xml
+++ b/examples/CameraTest/res/layout/product_item.xml
@@ -13,6 +13,14 @@
     
     <TextView
         android:id="@+id/barcode_string"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
