--- a/examples/CameraTest/res/layout/main2.xml
+++ b/examples/CameraTest/res/layout/main2.xml
@@ -32,6 +32,17 @@
         android:layout_weight="1"
         android:weightSum="3"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/price_sum"/>
+       <TextView
+            android:id="@+id/priceSum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearance" />
         <LinearLayout
         	android:layout_width="match_parent"
         	android:layout_height="0dp"
